[metadata]
description = {{ cookiecutter.description }}
name = {{ cookiecutter.project_name }}
version = file: VERSION

[options]
include_package_data = true
install_requires =
    loguru
packages = find:
py_modules =
setup_requires =
    setuptools

[options.entry_points]
console_scripts =

[options.extras_require]
build =
    build
    twine
commit =
    commitizen
    pre-commit
dev =
    allure-pytest
    allure-pytest-bdd
    black
    build
    commitizen
    cruft
    furo
    isort
    pip-tools
    pre-commit
    prospector[with_everything]
    pytest
    pytest-bdd
    pytest-codecov
    pytest-cov
    sphinx
    sphinx-autodoc-typehints
    twine
docs =
    furo
    sphinx
    sphinx-autodoc-typehints
format =
    black
    isort
lint =
    cruft
    prospector[with_everything]
test =
    allure-pytest
    allure-pytest-bdd
    pytest
    pytest-bdd
    pytest-codecov
    pytest-cov
